lib/kestrel-test-suite/testdata/memory_model/negative_conformance/enum_cloneable_and_not_copyable_is_conflicting.ks
// test: diagnostics
// stdlib: false

module Test

@builtin(.Copyable)
protocol Copyable {}

protocol Cloneable: Copyable {
    func clone() -> Self
}

enum State: Cloneable, not Copyable { // ERROR: cannot conform to `Cloneable` and opt out of `Copyable`
    case Active
    case Inactive

    func clone() -> State {
        self
    }
}
